# rustyjsonserver

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md
docs/: README.md  getting-started.md  installation.md
docs/cli/: commands.md
docs/configuration/: children.md  examples.md  methods.md  overview.md  resources.md
docs/rjscript/: builtins.md  examples.md  globals.md  introduction.md  syntax.md
examples/DynamicResponseExamples/1-HelloWorld/: HelloWorld.json
examples/DynamicResponseExamples/2-FileReferencedScript/: HelloWorld.rjscript  HelloWorldReferenced.json
examples/DynamicResponseExamples/3-RequestObject/: RequestBody.rjscript  RequestHeaders.rjscript  RequestParams.rjscript  RequestQuery.rjscript  Server.json
examples/DynamicResponseExamples/4-IfStatement/: MethodResponse.rjscript
examples/DynamicResponseExamples/5-SwitchExample/: MethodResponse.rjscript  Server.json
examples/DynamicResponseExamples/6-ForLoop/: MethodResponse.rjscript
examples/DynamicResponseExamples/8-DbTodoApp/: Server.json  (+5 more)
rjs-vscode/: create-extension.ps1  language-configuration.json  package-lock.json  package.json  tsconfig.json
rjs-vscode/scripts/: build-servers.js
rjs-vscode/src/: extension.ts
rjs-vscode/syntaxes/: rjscript.tmLanguage.json
src/: lib.rs  main.rs  rjs_lsp.rs
src/commands/: build.rs  mod.rs  serve.rs
src/config/: compiled.rs  manager.rs  mod.rs  raw.rs  resolved.rs  resolver.rs
src/filewatcher/: watcher.rs
src/http/: handler.rs  mod.rs  request.rs  router.rs  server.rs
src/rjscript/: mod.rs
src/rjsdb/: db.rs  mod.rs
(+62 files in other folders)
